--- a/app.json
+++ b/app.json
@@ -1,5 +1,7 @@
 {
+  "originalFullName":"@testinstaauthe/testinstaauthe",
   "expo": {
+    
     "name": "testinstaauthe",
     "slug": "testinstaauthe",
     "version": "1.0.0",
@@ -21,10 +23,12 @@
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.bom.obcsolution.testinstaauthe"
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "scheme":"com.bom.obcsolution.testinstaauthe"
   }
 }
